LOOKS: Fix audio-player button clipping in mac

--- a/src/app/common/audio-player/audio-player.scss
+++ b/src/app/common/audio-player/audio-player.scss
@@ -14,7 +14,7 @@
 
     i {
       font-size: 25px;
-      margin-left: -10px;
+      margin-left: -5px;
     }
   }
 
